--- a/scss/components/_main-content.scss
+++ b/scss/components/_main-content.scss
@@ -25,6 +25,7 @@
         position: absolute;
         right: 12px;
         top: 10px;
+        z-index: 1;
       }
       &__body {
         padding: 25px;
